force-app/main/default/objects/Contrato__c/fields/Asesor_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Comercial__c</fullName>
    <label>Asesor Comercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>