force-app/main/default/objects/Contrato__c/fields/Cuota_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Cuota_Entrada__c</fullName>
    <label>Cuota Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>