force-app/main/default/objects/Contrato__c/fields/Entregado__c.field-meta.xml
<CustomField>
    <fullName>Entregado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entregado</label>
    <type>Checkbox</type>
</CustomField>