force-app/main/default/objects/Contrato__c/fields/Estado_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Estado_Contrato__c</fullName>
    <label>Estado Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVO</fullName>
            </value>
            <value>
                <fullName>RESCILIADO</fullName>
            </value>
            <value>
                <fullName>ANULADO</fullName>
            </value>
            <value>
                <fullName>PAGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>