force-app/main/default/objects/Contrato__c/fields/Grupo_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Venta__c</fullName>
    <label>Grupo de Venta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>