force-app/main/default/objects/Contrato__c/fields/Ingresos__c.field-meta.xml
<CustomField>
    <fullName>Ingresos__c</fullName>
    <formula>Cuenta__r.AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ingresos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>