force-app/main/default/objects/Contrato__c/fields/Lote_M2__c.field-meta.xml
<CustomField>
    <fullName>Lote_M2__c</fullName>
    <label>Lote M2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>