force-app/main/default/objects/Contrato__c/fields/Modelo_Casa__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Casa__c</fullName>
    <label>Modelo Casa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>