force-app/main/default/objects/Contrato__c/fields/Nombre_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Proyecto__c</fullName>
    <label>Nombre del Proyecto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>