force-app/main/default/objects/Contrato__c/fields/Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Ocupacion__c</fullName>
    <formula>TEXT(Cuenta__r.Ocupacion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ocupacion</label>
    <type>Text</type>
</CustomField>