force-app/main/default/objects/Contrato__c/fields/Pagos_Vencidos__c.field-meta.xml
<CustomField>
    <fullName>Pagos_Vencidos__c</fullName>
    <label>Pagos Vencidos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>