force-app/main/default/objects/Contrato__c/fields/Plantas__c.field-meta.xml
<CustomField>
    <fullName>Plantas__c</fullName>
    <label>Plantas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>