force-app/main/default/objects/Contrato__c/fields/Probabilidad_de_Rescilio__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad_de_Rescilio__c</fullName>
    <label>Probabilidad de Rescilio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>