force-app/main/default/objects/Contrato__c/fields/Score_Buro__c.field-meta.xml
<CustomField>
    <fullName>Score_Buro__c</fullName>
    <formula>Cuenta__r.Score_Buro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Buró</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>