force-app/main/default/objects/Contrato__c/fields/Tipo_de_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Vivienda__c</fullName>
    <formula>TEXT(Cuenta__r.Tipo_de_Vivienda__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Vivienda</label>
    <type>Text</type>
</CustomField>