force-app/main/default/objects/Contrato__c/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <label>Ubicacion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>