force-app/main/default/objects/Contrato__c/fields/Valor_Cobrado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Cobrado__c</fullName>
    <label>Valor Cobrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>