force-app/main/default/objects/Contrato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Nombre_del_Proyecto__c</columns>
    <columns>Categoria_Producto__c</columns>
    <columns>Modelo_Casa__c</columns>
    <columns>Lote_M2__c</columns>
    <columns>Ingresos__c</columns>
    <columns>Ocupacion__c</columns>
    <columns>Plantas__c</columns>
    <columns>Pagos_Vencidos__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>